--- a/src/main/java/cu/lacumbre/auditor/DashBoard.form
+++ b/src/main/java/cu/lacumbre/auditor/DashBoard.form
@@ -648,6 +648,9 @@
           <Dimension value="[299, 500]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="sideMenu = new javax.swing.JPanel();"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
           <BorderConstraints direction="West"/>
